--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   flutter_polls: ^0.1.6
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.2
+  share_plus: ^7.2.1
+  path_provider: ^2.0.15
+  image: ^4.0.17
+  social_share:
+    path: packages/social_share
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
