--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,13 @@ dependencies:
   image: ^4.0.17
   social_share:
     path: packages/social_share
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
